# monitor-switcher

./: .gitignore  Cargo.toml  README.md  clippy.toml  config.example.yaml
.github/workflows/: ci.yml  release.yml
packaging/: PKGBUILD  PKGBUILD-bin
src/: config.rs  ddc.rs  lib.rs  main.rs  state.rs  switcher.rs  tray.rs
systemd/: monitor-switcher.service
